# DragDropSamples

./: CMakeLists.txt
Sample1/: CDropSource.cpp  CDropSource.hpp  CMakeLists.txt  Sample1.cpp
Sample2/: CDropTarget.cpp  CDropTarget.hpp  CMakeLists.txt  Sample2.cpp  Sample2_res.rc
Sample3/: CDropTarget.cpp  CDropTarget.hpp  CMakeLists.txt  CSimpleStream.cpp  CSimpleStream.hpp  Sample3.cpp  Sample3_res.rc
Sample4/: CDropTarget.c  CDropTarget.h  CMakeLists.txt  Sample4.c
